# pcl_clustering

./: .gitignore  CMakeLists.txt  readme.md
examples/ros_nodes/: CMakeLists.txt  publish_clusters_node.cpp  show_objects_node.cpp
src/clusterers/: image_based_clusterer.h
src/projections/: cloud_projection.cpp
src/ros_bridge/: CMakeLists.txt  cloud_odom_ros_publisher.cpp  cloud_odom_ros_publisher.h  cloud_odom_ros_subscriber.cpp  cloud_odom_ros_subscriber.h
src/utils/: cloud.h
